tests/specs/ecosystem/pdf/pdftext/1_0_0.test
pdf/pdftext/1.0.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /mod.ts:33:14
   | 
33 | export const pdfText = async (dataBuffer : DataBuffer)=> {
   |              ^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


